--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <div class="parte003"
     <img id="imagem1" src="time.jpeg">
-    <h4> Furacão ....Prof. Miderson 01/04</h4>
+    <h4> Furacão ....Prof. Martauro  01/04   </h4>
 </div>
 </body>
 </html>
